# Robot-SemseterProject2

./: README.md  c_code  data_f.txt
cppCode/src/: CMakeLists.txt  controller.cpp  controller.h  database.cpp  database.h  gripper.cpp  gripper.h  robotur5.cpp  robotur5.h  widget.cpp  widget.h  widget.ui
ur5GripperControler/: CMakeLists.txt  main.cpp  ur5andgripper.cpp  ur5andgripper.h  widget.cpp  widget.h  widget.ui
